<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.su.chinaso.suchef.AddDishActivity">

    <com.bilibili.magicasakura.widgets.TintToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/theme_color_primary"
        app:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.bilibili.magicasakura.widgets.TintToolbar>

    <com.su.chinaso.suchef.widgets.KeyEditText
        android:id="@+id/nameETv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:hint="@string/add_dish_name"
        android:layout_marginTop="15dp"

        android:background="@drawable/ic_edit_text_default"
        android:drawableLeft="@drawable/ic_dish_name"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:backgroundTint="@color/selector_focus"
        app:drawableLeftTint="@color/selector_focus"
        />

    <com.su.chinaso.suchef.widgets.KeyEditText
        android:id="@+id/priceETv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameETv"
        android:layout_marginTop="15dp"
        android:hint="@string/add_dish_price"
        android:background="@drawable/ic_edit_text_default"
        android:drawableLeft="@drawable/ic_dish_cost"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:backgroundTint="@color/selector_focus"
        app:drawableLeftTint="@color/selector_focus"
        />

    <com.su.chinaso.suchef.widgets.KeyEditText
        android:id="@+id/ingreETv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceETv"
        android:hint="@string/add_dish_ingredient"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_edit_text_default"
        android:drawableLeft="@drawable/ic_dish_ingre"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:backgroundTint="@color/selector_focus"
        app:drawableLeftTint="@color/selector_focus"
        />

    <com.bilibili.magicasakura.widgets.TintButton
        android:id="@+id/picBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ingreETv"
        android:layout_marginTop="19dp"
        android:text="@string/add_dish_pic_select"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large" />

    <com.bilibili.magicasakura.widgets.TintButton
        android:id="@+id/camBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picBtn"
        android:layout_marginTop="5dp"
        android:text="@string/add_dish_pic_shoot"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large" />

    <ImageView
        android:id="@+id/dishImg"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/camBtn"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_dish" />

    <com.bilibili.magicasakura.widgets.TintButton
        android:id="@+id/saveDishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dishImg"
        android:text="@string/save"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large" />
</RelativeLayout>
