<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.su.chinaso.suchef.CommentActivity">
    <com.bilibili.magicasakura.widgets.TintToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/theme_color_primary"
        app:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.bilibili.magicasakura.widgets.TintToolbar>
    <com.bilibili.magicasakura.widgets.TintTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="吃客评论"
        android:textSize="25sp"
        android:gravity="left"
        android:textColor="@color/selector_text"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:background="@color/gray_light"/>
    <View
        style="@style/subscribe_seperate_line"
        android:layout_marginBottom="0dp"
         />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />
    <View
        style="@style/subscribe_seperate_line"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="15dp" />
    <com.su.chinaso.suchef.widgets.KeyEditText
        android:id="@+id/commentEtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/comment_input"

        android:drawableLeft="@drawable/ic_comment"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:backgroundTint="@color/selector_focus"
        app:drawableLeftTint="@color/selector_focus"
        android:background="@drawable/ic_edit_text_default"
        />

    <Button
        android:id="@+id/saveDishBtn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dishImg"
        android:text="@string/save"
        android:background="@drawable/btn_bg"/>
</LinearLayout>
